--- a/hybris/config/local.properties
+++ b/hybris/config/local.properties
@@ -35,3 +35,6 @@ demostorefront.tomcat.pluggability.default.scan.enabled=false
 
 
 processing.webroot=<disabled>
+
+# don't need solr for your test? don't launch it
+solrserver.instances.default.autostart=false
