--- a/hybris/config/local.properties
+++ b/hybris/config/local.properties
@@ -27,6 +27,7 @@ tomcat.generaloptions= \
 
 demostorefront.webroot=
 storefrontContextRoot=
+
 demostorefront.tomcat.tld.scan=jstl-impl*.jar,json-taglib*.jar
 demostorefront.tomcat.tld.default.scan.enabled=false
 demostorefront.tomcat.pluggability.scan=
@@ -37,3 +38,31 @@ processing.webroot=<disabled>
 
 # don't need solr for your test? don't launch it
 solrserver.instances.default.autostart=false
+
+# Backoffice Dev Settings
+
+backoffice.cockpitng.development.mode=true
+# disable all caching for development
+backoffice.cockpitng.additionalResourceLoader.enabled=true
+backoffice.cockpitng.uifactory.cache.enabled=false
+backoffice.cockpitng.widgetclassloader.resourcecache.enabled=false
+backoffice.cockpitng.resourceloader.resourcecache.enabled=false
+# https://jira.hybris.com/browse/ECP-3238
+cockpitng.widgetclassloader.resourcecache.enabled=false
+
+backoffice.sass.source.map.enabled=true
+
+# hot deployment
+backoffice.cockpitng.hotDeployment.enabled=true
+
+#reset backoffice config every login
+backoffice.cockpitng.reset.triggers=login
+backoffice.cockpitng.reset.scope=widgets,cockpitConfig
+
+#logging
+log4j2.logger.ng.name = com.hybris.cockpitng
+log4j2.logger.ng.level = info
+
+log4j2.logger.bo.name = com.hybris.backoffice
+log4j2.logger.bo.level = info
+
