--- a/hybris/config/local.properties
+++ b/hybris/config/local.properties
@@ -41,6 +41,9 @@ solrserver.instances.default.autostart=false
 
 # Backoffice Dev Settings
 
+# setting this to false significantly improves server startup time!
+backoffice.fill.typefacade.cache.on.startup=false
+
 backoffice.cockpitng.development.mode=true
 # disable all caching for development
 backoffice.cockpitng.additionalResourceLoader.enabled=true
